--- a/cistila.html
+++ b/cistila.html
@@ -5,37 +5,56 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="sticky-top">
       <header>
-        <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
+        <p>Najboljša kavna storitev v Mariboru | <a href="#">Pokliči nas: +386 40 123 456</a></p>
       </header>
   
+      <!-- Navbar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container justify-content-center">
           <a class="navbar-brand" href="index.html">
-            <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
+            <img class="Logo-image" src="logo.png" alt="Peroša Lusso Logo">
           </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Domov</a>
+                <a class="nav-link" href="index.html">Domov</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="about.html">O Nas</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="products.html">Izdelki</a>
+  
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  Izdelki
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="kava.html">Kava</a>
+                  <a class="dropdown-item" href="cialde.html">Cialde</a>
+                  <a class="dropdown-item" href="cistila.html">Čistila</a>
+                  <a class="dropdown-item" href="skodelice.html">Skodelice</a>
+                </div>
               </li>
+  
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Kontakt</a>
+              </li>
+              <li class="nav-item"><a href="servis.html" class="nav-link">Servis</a>
+              </li>
+              <li class="nav-item"><a href="produkti.html" class="nav-link">Gostinska oprema</a>
               </li>
             </ul>
           </div>
@@ -58,7 +77,7 @@
       <h2 class="text-center mb-4">Profesionalna čistila</h2>
       <div class="row">
         <div class="col-md-6 offset-md-3">
-          <img src="images/professional-cleaning.jpg" class="img-fluid mb-4" alt="Profesionalna čistila">
+          <img src="images/cleaning-oprema.jpg" class="img-fluid mb-4" alt="Profesionalna čistila">
           <p>**2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
       </div>
@@ -68,7 +87,7 @@
       <h2 class="text-center mb-4">Vozički in pripomočki za čiščenje</h2>
       <div class="row">
         <div class="col-md-6">
-          <img src="images/cleaning-carts.jpg" class="img-fluid mb-4" alt="Vozički za čiščenje">
+          <img src="images/janitor-cart.jpg" class="img-fluid mb-4" alt="Vozički za čiščenje">
         </div>
         <div class="col-md-6">
           <p>**3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -83,7 +102,7 @@
           <p>**4. Lorem ipsum dolor sit amet, consectetur adipiscing elit.** Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
         <div class="col-md-6">
-          <img src="images/paper-dispensers.jpg" class="img-fluid mb-4" alt="Papir in podajalniki">
+          <img src="bokkpaper.jpg" class="img-fluid mb-4" alt="Papir in podajalniki">
         </div>
       </div>
     </section>
@@ -123,10 +142,9 @@
       <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
     </footer>
     
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
