--- a/kava.html
+++ b/kava.html
@@ -67,30 +67,47 @@
 <body>
   <div class="sticky-top">
     <header>
-      <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
+      <p>Najboljša kavna storitev v Mariboru | <a href="#">Pokliči nas: +386 40 123 456</a></p>
     </header>
 
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container jusify-content-center">
+      <div class="container justify-content-center">
         <a class="navbar-brand" href="index.html">
-          <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
+          <img class="Logo-image" src="logo.png" alt="Peroša Lusso Logo">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Domov</a>
+              <a class="nav-link" href="index.html">Domov</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html">O Nas</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="products.html">Izdelki</a>
+
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Izdelki
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="kava.html">Kava</a>
+                <a class="dropdown-item" href="cialde.html">Cialde</a>
+                <a class="dropdown-item" href="cistila.html">Čistila</a>
+                <a class="dropdown-item" href="skodelice.html">Skodelice</a>
+              </div>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Kontakt</a>
+            </li>
+            <li class="nav-item"><a href="servis.html" class="nav-link">Servis</a>
+            </li>
+            <li class="nav-item"><a href="produkti.html" class="nav-link">Gostinska oprema</a>
             </li>
           </ul>
         </div>
@@ -166,7 +183,7 @@
       <!-- Sugar Products -->
       <div class="row mb-5 align-items-center product-display">
         <div class="col-md-6 order-md-2">
-          <img src="images/sugar/sugar-packets.jpg" class="img-fluid" alt="Pakirani sladkor">
+          <img src="images/sladkorji.png" class="img-fluid" alt="Pakirani sladkor">
         </div>
         <div class="col-md-6 order-md-1 d-flex flex-column justify-content-center text-content">
           <h3 class="product-title">Pakirani Sladkor</h3>
@@ -176,7 +193,7 @@
 
       <div class="row mb-5 align-items-center product-display">
         <div class="col-md-6">
-          <img src="images/cookies/cookies-crispies.jpg" class="img-fluid" alt="Piskotki in Crispiji">
+          <img src="images/kavni_piskoti.png" class="img-fluid" alt="Piskotki in Crispiji">
         </div>
         <div class="col-md-6 d-flex flex-column justify-content-center text-content">
           <h3 class="product-title">Piskoti in Crispiji</h3>
@@ -221,10 +238,9 @@
     <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="js/main.js"></script>
   <script>
     document.getElementById('scroll-to-products').addEventListener('click', function(event) {
