--- a/servis.html
+++ b/servis.html
@@ -1,86 +1,149 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <title>Title</title>
+<html lang="sl">
+
+<head>
+    <title>Servis Gostinske Opreme - Peroša</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
     <div class="sticky-top">
-      <header>
-        <p><i class="fas fa-envelope"></i> Vsa povpraševanja se pošljejo na naš e-mail: <a href="mailto:info@perosa.com">info@perosa.com</a></p>
-      </header>
-  
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container jusify-content-center">
-          <a class="navbar-brand" href="index.html">
-            <img class="Logo-image" src="images/Logo-perosa.png" alt="Peroša Lusso kava Maribor">
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="index.html">Domov</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">O Nas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="products.html">Izdelki</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Kontakt</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        <header>
+            <p>Najboljša kavna storitev v Mariboru | <a href="#">Pokliči nas: +386 40 123 456</a></p>
+        </header>
+
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container justify-content-center">
+                <a class="navbar-brand" href="index.html">
+                    <img class="Logo-image" src="logo.png" alt="Peroša Lusso Logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Domov</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">O Nas</a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Izdelki
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="kava.html">Kava</a>
+                                <a class="dropdown-item" href="cialde.html">Cialde</a>
+                                <a class="dropdown-item" href="cistila.html">Čistila</a>
+                                <a class="dropdown-item" href="skodelice.html">Skodelice</a>
+                            </div>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Kontakt</a>
+                        </li>
+                        <li class="nav-item"><a href="servis.html" class="nav-link active">Servis</a></li>
+                        <li class="nav-item"><a href="produkti.html" class="nav-link">Gostinska oprema</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
 
-      
+    <!-- Servis Section -->
+    <section class="container my-5">
+        <div class="text-center">
+            <h1>Servis Gostinske Opreme</h1>
+            <p class="lead">Nudimo vrhunski servis kavnih aparatov, ledomatov in pomivalnih strojev.</p>
+        </div>
+
+        <div class="row my-5">
+            <div class="col-md-6">
+                <img src="images/servis.jpg" alt="Servis kavnih aparatov" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6">
+                <h3>Zakaj izbrati naš servis?</h3>
+                <p>V podjetju Peroša smo specializirani za profesionalni servis gostinske opreme, ki vključuje:</p>
+                <ul>
+                    <li>Redno vzdrževanje kavnih aparatov</li>
+                    <li>Popravila ledomatov in pomivalnih strojev</li>
+                    <li>Servis na terenu po dogovoru</li>
+                    <li>Hitro odzivni čas in vrhunska tehnična podpora</li>
+                </ul>
+                <a href="contact.html" class="btn btn-primary mt-3">Kontaktirajte nas</a>
+            </div>
+        </div>
+
+        <div class="text-center mt-5">
+            <h3>Kaj vključuje naš servis?</h3>
+            <p>Naš servis vključuje celovit pregled in popravila vseh vrst gostinske opreme. Z uporabo originalnih delov in napredne diagnostike zagotavljamo, da bo vaša oprema delovala brezhibno.</p>
+            <ul class="list-unstyled">
+                <li><i class="fas fa-check-circle"></i> Menjava filtrov in čistilnih sredstev</li>
+                <li><i class="fas fa-check-circle"></i> Diagnostika in odprava napak</li>
+                <li><i class="fas fa-check-circle"></i> Čiščenje in optimizacija delovanja aparatov</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6 text-left">
-              <h4 class="footer-title">Hitre Povezave</h4>
-              <ul class="footer-links">
-                <li><a href="index.html" class="footer-link">Domov</a></li>
-                <li><a href="about.html" class="footer-link">O Nas</a></li>
-                <li><a href="products.html" class="footer-link">Izdelki</a></li>
-                <li><a href="cialde.html" class="footer-link">Cialde</a></li>
-                <li><a href="contact.html" class="footer-link">Kontakt</a></li>
-              </ul>
+            <div class="row">
+                <div class="col-md-6 text-left">
+                    <h4 class="footer-title">Hitre Povezave</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html" class="footer-link">Domov</a></li>
+                        <li><a href="about.html" class="footer-link">O Nas</a></li>
+                        <li><a href="products.html" class="footer-link">Izdelki</a></li>
+                        <li><a href="cialde.html" class="footer-link">Cialde</a></li>
+                        <li><a href="contact.html" class="footer-link">Kontakt</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6 text-left contact-info">
+                    <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
+                    <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota,
+                        Slovenija</p>
+                    <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
+                    <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com"
+                            class="footer-link-mail">pavelperosa@gmail.com</a></p>
+                </div>
             </div>
-            <div class="col-md-6 text-left contact-info">
-              <h4 class="footer-title about-contact-title">Kontaktirajte Nas</h4>
-              <p><i class="fas fa-map-marker-alt mr-2"></i>Pavel Peroša s.p., Vršnik 5, 2201 Zgornja Kungota, Slovenija</p>
-              <p><i class="fas fa-phone-alt mr-2"></i>Telefonska številka: +386 40 568 073</p>
-              <p><i class="fas fa-envelope mr-2"></i>E-pošta: <a href="mailto:pavelperosa@gmail.com" class="footer-link-mail">pavelperosa@gmail.com</a></p>
+            <div class="row mt-3">
+                <div class="col-md-12 text-center">
+                    <div class="social-icons">
+                        <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
+                        <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
+                        <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                    </div>
+                </div>
             </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-md-12 text-center">
-              <div class="social-icons">
-                <a href="#" class="mr-3"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#" class="mr-3"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-              </div>
-            </div>
-          </div>
         </div>
         <p class="mt-3 footer-credits">&copy; 2024 Peroša. Vse pravice pridržane.</p>
         <a href="splosni-pogoji.html" class="footer-a">Pogoji poslovanja</a>
-      </footer>
+    </footer>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
